--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -93,7 +93,12 @@ body {
 /* main */
 
 .main-container {
-  padding-left: 160px;
+  padding-top: 90px;
+
+  @include media-breakpoint-up(lg) {
+    padding-top: 0;
+    padding-left: 160px;
+  }
 
   @include media-breakpoint-up(xxxl) {
     padding-left: 200px;
@@ -101,7 +106,11 @@ body {
 }
 
 .content-container {
-  padding: 0 42px;
+  padding: 0 30px;
+
+  @include media-breakpoint-up(lg) {
+    padding: 0 42px;
+  }
 
   @include media-breakpoint-up(xxxl) {
     padding: 0 86px;
@@ -110,6 +119,7 @@ body {
 
 .main-nav {
   position: fixed;
+  top: 0;
   left: 0;
   display: flex;
   flex-direction: column;
@@ -337,8 +347,12 @@ body {
 }
 
 .hero {
-  padding: 48px 0 72px;
+  padding: 10px 0 30px;
   background-color: $ed-red-1;
+
+  @include media-breakpoint-up(lg) {
+    padding: 48px 0 72px;
+  }
 
   @include media-breakpoint-up(xxxl) {
     padding: 72px 0 90px;
@@ -397,11 +411,16 @@ body {
 }
 
 .about {
+  padding-bottom: 30px;
   background-color: $ed-red-1;
 
   .about-img {
-    margin-bottom: -30%;
     width: 100%;
+    margin-bottom: 20px;
+
+    @include media-breakpoint-up(lg) {
+      margin-bottom: -30%;
+    }
   }
 
   .about-text {
@@ -423,14 +442,18 @@ body {
   padding: 34px 0 78px;
 
   .detail-title {
-    margin: 0;
+    margin-bottom: 30px;
     font-size: 64px;
     font-weight: 700;
     line-height: normal;
     color: $ed-red-1;
 
+    @include media-breakpoint-up(lg) {
+      margin-bottom: 0;
+    }
+
     @include media-breakpoint-up(xxxl) {
-      font: 92px;
+      font-size: 92px;
     }
   }
 
@@ -456,17 +479,26 @@ body {
     .detail-content-text {
       max-width: 440px;
       margin: 0;
-      margin-left: auto;
+      margin-bottom: 30px;
       font-size: 20px;
       font-weight: 400;
       line-height: 34px;
       color: $ed-brown-1;
+
+      @include media-breakpoint-up(lg) {
+        margin-left: auto;
+        margin-bottom: 0;
+      }
     }
 
     .detail-content-grid {
       display: grid;
-      grid-template-columns: repeat(5, minmax(0, 1fr));
-      direction: rtl;
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+
+      @include media-breakpoint-up(lg) {
+        grid-template-columns: repeat(5, minmax(0, 1fr));
+        direction: rtl;
+      }
     }
 
     .detail-content-box {
@@ -485,8 +517,12 @@ body {
 }
 
 .description {
-  padding: 100px 0;
+  padding: 60px 0;
   background-color: $ed-brown-1;
+
+  @include media-breakpoint-up(lg) {
+    padding: 100px 0;
+  }
 
   @include media-breakpoint-up(xxxl) {
     padding: 195px 0 202px;
@@ -509,7 +545,11 @@ body {
   }
 
   .description-content {
-    margin-top: 42%;
+    margin-top: 30px;
+    @include media-breakpoint-up(lg) {
+      margin-top: 0;
+      margin-top: 42%;
+    }
   }
 }
 
@@ -524,10 +564,14 @@ body {
 
   .partner-title {
     margin-bottom: 40px;
-    font-size: 64px;
+    font-size: 42px;
     font-weight: 700;
     line-height: 1;
     color: $ed-white;
+
+    @include media-breakpoint-up(lg) {
+      font-size: 64px;
+    }
 
     @include media-breakpoint-up(xxxl) {
       font-size: 92px;
@@ -546,8 +590,12 @@ body {
 }
 
 .footer {
-  padding: 80px 0;
+  padding: 60px 0;
   background-color: $ed-white-1;
+
+  @include media-breakpoint-up(lg) {
+    padding: 80px 0;
+  }
 
   .footer-title {
     margin-bottom: 38px;
@@ -559,10 +607,17 @@ body {
 
   .footer-menus {
     display: flex;
+    flex-direction: column;
     margin-bottom: 48px;
 
+    @include media-breakpoint-up(lg) {
+      flex-direction: row;
+    }
+
     .footer-menu {
-      margin-right: 82px;
+      @include media-breakpoint-up(lg) {
+        margin-right: 82px;
+      }
 
       .footer-menu-title {
         margin-bottom: 24px;
@@ -581,7 +636,10 @@ body {
           line-height: 34px;
           color: $ed-brown-1;
           text-decoration: none;
-          white-space: nowrap;
+
+          @include media-breakpoint-up(lg) {
+            white-space: nowrap;
+          }
         }
       }
     }
@@ -589,9 +647,14 @@ body {
 
   .footer-other-menus {
     display: flex;
+    flex-direction: column;
     padding-bottom: 14px;
     margin-bottom: 22px;
     border-bottom: 1px solid $ed-grey-1;
+
+    @include media-breakpoint-up(lg) {
+      flex-direction: row;
+    }
 
     .footer-other-menu {
       margin: 0;
@@ -602,7 +665,9 @@ body {
       text-decoration: none;
 
       & + .footer-other-menu {
-        margin-left: 28px;
+        @include media-breakpoint-up(lg) {
+          margin-left: 28px;
+        }
       }
     }
   }
