--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -29,8 +29,19 @@ $ed-brown-1: #473a3a;
 /* bootstrap variables custom */
 
 $ed-theme-colors: (
+  'ed-black': $ed-black,
+  'ed-white': $ed-white,
+  'ed-white-1': $ed-white-1,
+  'ed-grey-1': $ed-grey-1,
   'ed-red-1': $ed-red-1,
+  'ed-brown-1': $ed-brown-1,
 );
+
+$theme-colors: map-merge($theme-colors, $ed-theme-colors);
+$theme-colors-rgb: map-loop($theme-colors, to-rgb, '$value');
+$utilities-colors: map-merge($utilities-colors, $theme-colors-rgb);
+$utilities-text-colors: map-loop($utilities-colors, rgba-css-var, '$key', 'text');
+$utilities-bg-colors: map-loop($utilities-colors, rgba-css-var, '$key', 'bg');
 
 $spacers: (
   0: 0,
@@ -41,6 +52,7 @@ $spacers: (
   5: $spacer * 3,
   '66px': 66px,
   '72px': 72px,
+  '80px': 80px,
   '110px': 110px,
 );
 
@@ -53,6 +65,7 @@ $gutters: (
   5: $spacer * 3,
   '66px': 66px,
   '72px': 72px,
+  '80px': 80px,
   '110px': 110px,
 );
 
@@ -84,8 +97,32 @@ body {
   color: $ed-brown-1;
 }
 
+.btn {
+  border-radius: 0;
+}
+
+.btn-xxl {
+  padding: 12px 130px;
+  font-size: 48px;
+}
+
 .c-pointer {
   cursor: pointer;
+}
+
+.thumbnail-square {
+  position: relative;
+  width: 100%;
+  height: auto;
+  padding-bottom: 100%;
+
+  img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
 }
 
 /* general */
@@ -94,6 +131,7 @@ body {
 
 .main-container {
   padding-top: 90px;
+  overflow: hidden;
 
   @include media-breakpoint-up(lg) {
     padding-top: 0;
@@ -347,10 +385,14 @@ body {
 }
 
 .hero {
+  width: 100%;
   padding: 10px 0 30px;
   background-color: $ed-red-1;
 
   @include media-breakpoint-up(lg) {
+    display: flex;
+    align-items: center;
+    min-height: 100vh;
     padding: 48px 0 72px;
   }
 
@@ -408,6 +450,57 @@ body {
     line-height: 34px;
     color: $ed-white;
   }
+
+  &.our-world {
+    padding: 30px 0;
+    background-color: $ed-white;
+
+    @include media-breakpoint-up(lg) {
+      padding: 15px;
+    }
+
+    @include media-breakpoint-up(xxxl) {
+      padding: 112px 100px;
+    }
+
+    .hero-title {
+      margin-bottom: 15px;
+      font-size: 48px;
+      line-height: 1;
+      color: $ed-red-1;
+
+      @include media-breakpoint-up(lg) {
+        margin-bottom: 30px;
+        font-size: 200px;
+      }
+    }
+
+    .hero-subtitle {
+      margin-bottom: 15px;
+      font-size: 20px;
+      font-weight: 700;
+      line-height: 34px;
+      color: $ed-black;
+
+      @include media-breakpoint-up(lg) {
+        margin-bottom: 40px;
+      }
+    }
+
+    .hero-text {
+      max-width: 100%;
+      margin: 0;
+      font-size: 24px;
+      font-weight: 400;
+      line-height: 1.25;
+      color: $ed-red-1;
+
+      @include media-breakpoint-up(lg) {
+        max-width: 80%;
+        font-size: 48px;
+      }
+    }
+  }
 }
 
 .about {
@@ -434,6 +527,45 @@ body {
       font-size: 40px;
       font-weight: 700;
       line-height: normal;
+    }
+  }
+}
+
+.our-world {
+  padding: 30px 0;
+
+  @include media-breakpoint-up(lg) {
+    padding: 100px 40px 30px;
+  }
+
+  @include media-breakpoint-up(xxxl) {
+    padding: 100px 40px;
+  }
+
+  .our-world-title {
+    margin: 0;
+    font-size: 42px;
+    font-weight: 700;
+    line-height: normal;
+    color: $ed-red-1;
+
+    @include media-breakpoint-up(lg) {
+      font-size: 110px;
+    }
+
+    @include media-breakpoint-up(xxxl) {
+      font-size: 160px;
+      line-height: 175px;
+    }
+  }
+
+  .our-world-text {
+    margin-bottom: 40px;
+    color: $ed-brown-1;
+
+    @include media-breakpoint-up(xxxl) {
+      font-size: 24px;
+      line-height: 34px;
     }
   }
 }
@@ -678,6 +810,231 @@ body {
     font-weight: 400;
     line-height: 34px;
     color: $ed-grey-1;
+  }
+}
+
+.inside {
+  padding: 30px 0;
+
+  @include media-breakpoint-up(lg) {
+    padding: 117px 0;
+  }
+
+  .inside-title {
+    margin-bottom: 38px;
+    font-size: 42px;
+    font-weight: 700;
+    line-height: normal;
+    color: $ed-red-1;
+
+    &.outline {
+      -webkit-text-fill-color: white;
+      -webkit-text-stroke-width: 1.5px;
+      -webkit-text-stroke-color: $ed-red-1;
+    }
+
+    @include media-breakpoint-up(lg) {
+      font-size: 92px;
+      line-height: 110px;
+    }
+  }
+
+  .inside-text {
+    margin-bottom: 38px;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 34px;
+    color: $ed-brown-1;
+  }
+}
+
+.talents {
+  padding: 30px 0;
+  background-color: $ed-brown-1;
+
+  @include media-breakpoint-up(lg) {
+    padding: 90px 0 84px;
+  }
+
+  .talents-title {
+    margin-bottom: 30px;
+    font-size: 58px;
+    font-weight: 700;
+    line-height: normal;
+    color: $ed-red-1;
+
+    @include media-breakpoint-up(lg) {
+      font-size: 92px;
+    }
+
+    @include media-breakpoint-up(xxxl) {
+      margin-bottom: 80px;
+      font-size: 160px;
+      line-height: 175px;
+    }
+  }
+
+  .talents-text {
+    margin: 0;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 34px;
+    color: $ed-white-1;
+  }
+
+  .talents-text-q {
+    width: 100%;
+    max-width: 738px;
+    margin-top: auto;
+    margin-bottom: 30px;
+    margin-left: auto;
+    font-size: 36px;
+    font-weight: 400;
+    line-height: normal;
+    color: $ed-white-1;
+
+    @include media-breakpoint-up(lg) {
+      margin-bottom: 100px;
+    }
+
+    @include media-breakpoint-up(xxxl) {
+      font-size: 48px;
+      line-height: 58px;
+    }
+  }
+
+  .talent-item {
+    .talent-item-img {
+      margin-bottom: 20px;
+    }
+
+    .talent-item-name {
+      margin-bottom: 8px;
+      font-size: 28px;
+      font-weight: 700;
+      line-height: normal;
+      color: $ed-red-1;
+
+      @include media-breakpoint-up(lg) {
+        font-size: 32px;
+      }
+
+      @include media-breakpoint-up(xxxl) {
+        font-size: 48px;
+        line-height: 58px;
+      }
+    }
+
+    .talent-item-role {
+      margin: 0;
+      color: $ed-white-1;
+
+      @include media-breakpoint-up(xxxl) {
+        font-size: 24px;
+        line-height: 24px;
+      }
+    }
+  }
+}
+
+.why {
+  padding: 30px 0 0;
+
+  @include media-breakpoint-up(lg) {
+    padding: 60px 0;
+  }
+
+  .why-title {
+    margin-bottom: 30px;
+    font-size: 62px;
+    font-weight: 700;
+    line-height: normal;
+    color: $ed-red-1;
+
+    @include media-breakpoint-up(lg) {
+      margin-bottom: 68px;
+      font-size: 110px;
+    }
+
+    @include media-breakpoint-up(xxxl) {
+      font-size: 160px;
+      line-height: 175px;
+    }
+  }
+
+  .why-text {
+    margin-bottom: 18px;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 34px;
+    color: $ed-red-1;
+  }
+
+  .why-img {
+    width: 100%;
+    height: auto;
+    margin-top: 30px;
+
+    @include media-breakpoint-up(lg) {
+      margin-top: 0;
+      margin-bottom: -18%;
+      transform: scale(1.15);
+      transform-origin: top left;
+    }
+  }
+}
+
+.quality {
+  padding: 30px 0;
+  background-color: $ed-red-1;
+
+  @include media-breakpoint-up(lg) {
+    padding: 90px 0 0;
+  }
+
+  .quality-title {
+    margin-bottom: 30px;
+    font-size: 68px;
+    font-weight: 700;
+    line-height: normal;
+    color: $ed-white-1;
+
+    @include media-breakpoint-up(lg) {
+      margin-bottom: 60px;
+      font-size: 92px;
+      line-height: 110px;
+    }
+  }
+
+  .quality-items {
+    margin-top: 30px;
+
+    @include media-breakpoint-up(lg) {
+      margin-top: 22%;
+    }
+  }
+
+  .quality-item-title {
+    margin-bottom: 0;
+    font-size: 32px;
+    font-weight: 400;
+    line-height: normal;
+    color: $ed-white-1;
+
+    @include media-breakpoint-up(xxxl) {
+      font-size: 48px;
+      line-height: 58px;
+    }
+  }
+
+  .quality-item-text {
+    margin-bottom: 0;
+    color: $ed-white-1;
+
+    @include media-breakpoint-up(xxxl) {
+      font-size: 24px;
+      line-height: 34px;
+    }
   }
 }
 
