:hammer: Update: Add expertise page

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -54,6 +54,7 @@ $spacers: (
   '72px': 72px,
   '80px': 80px,
   '110px': 110px,
+  '200px': 200px,
 );
 
 $gutters: (
@@ -67,6 +68,7 @@ $gutters: (
   '72px': 72px,
   '80px': 80px,
   '110px': 110px,
+  '200px': 200px,
 );
 
 $grid-breakpoints: (
@@ -1034,6 +1036,88 @@ body {
     @include media-breakpoint-up(xxxl) {
       font-size: 24px;
       line-height: 34px;
+    }
+  }
+}
+
+.expertise {
+  padding: 30px 0 60px;
+
+  @include media-breakpoint-up(lg) {
+    padding: 60px 0 620px;
+  }
+
+  .expertise-title {
+    margin-bottom: 40px;
+    font-size: 72px;
+    font-weight: 700;
+    line-height: 1;
+    color: $ed-red-1;
+    -webkit-text-fill-color: white;
+    -webkit-text-stroke-width: 1.5px;
+    -webkit-text-stroke-color: $ed-red-1;
+
+    @include media-breakpoint-up(lg) {
+      font-size: 200px;
+      margin-bottom: 60px;
+    }
+
+    @include media-breakpoint-up(xxxl) {
+      margin-bottom: 148px;
+    }
+  }
+
+  .expertise-item-title {
+    margin: 0;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: normal;
+    color: $ed-red-1;
+
+    @include media-breakpoint-up(lg) {
+      font-size: 64px;
+    }
+
+    @include media-breakpoint-up(xxxl) {
+      font-size: 92px;
+    }
+  }
+
+  .expertise-item-text {
+    margin: 0;
+    font-size: 26px;
+    font-weight: 400;
+    line-height: normal;
+    color: $ed-brown-1;
+
+    @include media-breakpoint-up(lg) {
+      font-size: 32px;
+    }
+
+    @include media-breakpoint-up(xxxl) {
+      font-size: 48px;
+    }
+  }
+
+  .expertise-list-items {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    column-count: 2;
+
+    .expertise-list-item {
+      font-size: 26px;
+      font-weight: 400;
+      line-height: normal;
+      color: $ed-brown-1;
+
+      @include media-breakpoint-up(lg) {
+        font-size: 32px;
+      }
+
+      @include media-breakpoint-up(xxxl) {
+        font-size: 48px;
+      }
     }
   }
 }
